--- a/artwork.html
+++ b/artwork.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Julianna Jarvis Art</h1>
         <nav>
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
           <a href="#about">About</a>
           <a href="checkout.html" class="cart-link">
             <img src="images/cart.png" alt="Cart">
